[WIP] Add ability to download sources behind authenticated proxy (#388)
* Initial plan

* Add Eclipse proxy support for source downloads

- Add org.eclipse.core.net dependency for proxy service
- Create ProxyUtil helper class for proxy configuration
- Update UrlDownloader to use Eclipse proxy settings
- Update AbstractSourceCodeFinder for proxy support
- Update NexusSourceCodeFinder for proxy support
- Update ArtifactorySourceCodeFinder for proxy support
- Update SonatypeSourceCodeFinder for proxy support
- Add basic ProxyUtil tests
- Maintains backward compatibility when no proxy is configured

Agent-Logs-Url: https://github.com/nbauma109/ecd/sessions/5415a472-2e86-4422-953d-3d9f5857f1d3

Co-authored-by: nbauma109 <9403560+nbauma109@users.noreply.github.com>

* Fix Logger.debug() API calls and final variable issue

Agent-Logs-Url: https://github.com/nbauma109/ecd/sessions/511e1bea-6ddb-4b4f-b85d-5aff47908c6b

Co-authored-by: nbauma109 <9403560+nbauma109@users.noreply.github.com>

* Add assertEqualsIgnoreEOL helper and fix failing test

Agent-Logs-Url: https://github.com/nbauma109/ecd/sessions/58294867-45d8-43c1-9eb1-ee1575a599ff

Co-authored-by: nbauma109 <9403560+nbauma109@users.noreply.github.com>

* Refactor ProxyUtil to eliminate code duplication

Agent-Logs-Url: https://github.com/nbauma109/ecd/sessions/02affcbc-f1a7-4440-82a4-fb4186c10018

Co-authored-by: nbauma109 <9403560+nbauma109@users.noreply.github.com>

* Add comprehensive comments explaining proxy detection and credential passing

Documented how Eclipse IProxyService detects proxy settings from OS:
- Windows: via WinINet API (IE/Edge settings)
- macOS: from System Preferences Network settings
- Linux: from GNOME/KDE or environment variables

Documented how system credentials are passed:
- Windows: from Windows Credential Manager
- macOS: from Keychain
- Linux: from GNOME Keyring/KWallet

Added inline comments explaining Java Authenticator security checks.

Agent-Logs-Url: https://github.com/nbauma109/